// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders UI 1`] = `
<div>
  <form
    class="bg-white text-xs p-3 text-left map-builder"
  >
    <div
      class="flex flex-wrap "
    >
      <div
        class="w-full mb-3"
      >
        <label
          class="text-xs font-bold uppercase text-gray-700"
          for="lonField"
        >
          Longitude field
        </label>
        <div
          class="relative"
        >
          <select
            class="block appearance-none w-full mt-1 bg-gray-200 border border-gray-200 text-gray-700 py-2 px-2 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
            id="lonField"
            name="lonField"
            placeholder="Longitude field"
            title="Longitude field"
          >
            <option
              value="a"
            >
              a
            </option>
            <option
              value="b"
            >
              b
            </option>
            <option
              value="c"
            >
              c
            </option>
          </select>
          <div
            class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
          >
            <svg
              class="fill-current h-4 w-4"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="w-full mb-3"
      >
        <label
          class="text-xs font-bold uppercase text-gray-700"
          for="latField"
        >
          Latitude field
        </label>
        <div
          class="relative"
        >
          <select
            aria-label="Latitude field"
            class="block appearance-none w-full mt-1 bg-gray-200 border border-gray-200 text-gray-700 py-2 px-2 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
            id="latField"
            name="latField"
            placeholder="Latitude field"
          >
            <option
              value="a"
            >
              a
            </option>
            <option
              value="b"
            >
              b
            </option>
            <option
              value="c"
            >
              c
            </option>
          </select>
          <div
            class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
          >
            <svg
              class="fill-current h-4 w-4"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="w-full mb-3"
      >
        <label
          class="text-xs  font-bold uppercase text-gray-700"
          for="geomField"
        >
          Geometry field
        </label>
        <div
          class="relative"
        >
          <select
            aria-label="Geometry field"
            class="block appearance-none w-full mt-1 bg-gray-200 border border-gray-200 text-gray-700 py-2 px-2 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
            id="geomField"
            name="geomField"
            placeholder="Geometry field"
          >
            <option
              value="a"
            >
              a
            </option>
            <option
              value="b"
            >
              b
            </option>
            <option
              value="c"
            >
              c
            </option>
          </select>
          <div
            class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
          >
            <svg
              class="fill-current h-4 w-4"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        aria-label="My popup: \${data.fieldName}"
        class="w-full mb-3"
        id="infobox"
        role="group"
      >
        <label
          class="text-xs  font-bold uppercase text-gray-700"
          for="infobox"
        >
          Infobox
        </label>
        <div
          class="relative"
        >
          <input
            aria-label="My popup: \${data.fieldName}"
            class="block appearance-none w-full mt-1 bg-gray-200 border border-gray-200 text-gray-700 py-2 px-2 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
            name="infobox"
            placeholder="My popup: \${data.fieldName}"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="w-full mb-3"
      >
        <div
          class="flex justify-center"
        >
          <button
            class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-2 rounded focus:outline-none focus:shadow-outline"
            type="submit"
          >
            Add map
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`shows error message for non-compiled view 1`] = `
<div>
  <div>
    MapBuilder requires resource to be compiled into view.
  </div>
</div>
`;

exports[`shows error message if no schema 1`] = `
<div>
  <div>
    MapBuilder requires resource schema.
  </div>
</div>
`;
